# dbt-fundamentals

./: README.md  profiles.example.yml  pyproject.toml
data/: schema.sql
dbt_fundamentals/: dbt_project.yml  profiles.yml
jaffle_shop/models/staging/jaffle_shop/: src_jaffle_shop.yml  src_stripe.yml  stg_jaffle_shop.yml
jaffle_shop/models/staging/stripe/: stg_payments.sql
