[tool.poetry]
name = "dbt-fundamentals"
version = "0.1.0"
description = "Practice for the dbt fundamentals course"
authors = ["Sebastian Göttschkes"]
[tool.poetry.dependencies]
python = "^3.11"
dbt-postgres = "^1.4.1"
[tool.poetry.dev-dependencies]
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
